# docker-course-2

./: Dockerfile  Dockerfle  README.md  script.sh
sampleCode/CMake/: CMakeLists.txt  main.cpp
sampleCode/Extras/: renderFace.hpp
sampleCode/Notebook/: Course2_CPP_Sample_Notebook.ipynb  Course2_PY3_Sample_Notebook.ipynb
